src/snapshots/afrotd__parser__tests__rule_html_9.3.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.3.5 Blocken in den Rücken
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Block in den Rücken ist illegal (außer gegen den Runner)
                (A.R. 9.3.3.I, 9.3.3.VII und 9.3.3.IX und 10.2.2.XII).
            </p>
            <ol type="a">
                <p>
                    <strong>Ausnahmen:</strong>
                </p>
                <ol type="1">
                    <li>Offense Spieler, die sich beim Snap an der Scrimmage
                    Line innerhalb der Blockzone (Regel 2.3.6) befinden, dürfen
                    in der Blockzone legal in den Rücken blocken, abhängig von
                    den folgenden Beschränkungen:
                        <ol type="a">
                            <li>Ein Spieler an der Scrimmage Line innerhalb der
                            Blockzone darf diese nicht verlassen und wieder
                            zurückkehren, um legal in den Rücken zu blocken.
                            </li>
                            <li>Die Blockzone existiert solange, bis der Ball
                            die Zone erstmals verlässt (Regel 2.3.6).
                            </li>
                        </ol>
                    </li>
                    <li>Wenn ein Spieler seinen Rücken einem möglichen Blocker
                    zudreht, nachdem dieser seine Blockabsicht durch seine
                    Richtung oder seine Bewegung angezeigt hat.
                    </li>
                    <li>Wenn ein Spieler versucht, einen Runner zu erreichen
                    oder legal versucht, einen Fumble, einen Rückpass, einen
                    Kick oder einen berührten Vorwärtspass zu fangen oder zu
                    recovern, darf er einen Gegner in dessen Rücken über der
                    Gürtellinie wegdrücken (Regel 9.1.5 Ausnahme 3).
                    </li>
                    <li>Wenn ein Gegner dem Blocker seinen Rücken wie unter
                    Regel 9.3.3.a.1.b zudreht.
                    </li>
                    <li>
                        <p>
                            Wenn ein berechtigter Spieler hinter der neutralen
                            Zone einen Gegner im Rücken über der Gürtellinie
                            wegdrückt, um an einen Vorwärtspass zu gelangen
                            (Regel 9.1.5 Ausnahme 4).
                        </p>
                        <p>
                            <strong>Strafe: 10 Meter. Strafen für Team A-Fouls
                            hinter der neutralen Zone werden vom Previous Spot
                            durchgeführt. Safety, wenn sich das Foul hinter
                            Team A’s Goalline ereignet [S43].</strong>
                        </p>
                    </li>
                </ol>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.3.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
