src/snapshots/afrotd__parser__tests__rule_html_9.4.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.4.3 Schlagen eines Balles in Besitz
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Ball, der sich im Besitz eines Spielers befindet, darf von
                einem Spieler desselben Teams nicht nach vorne geschlagen
                werden.
            </p>
            <p>
                <strong>Strafe: 10 Meter [S31]</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.4.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
