src/snapshots/afrotd__parser__tests__rule_html_9.4.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            9.4.4 Illegales Kicken des Balles
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Kein Spieler darf einen freien Ball, einen Vorwärtspass oder
                einen Ball, der von einem Gegner zu einem Place Kick gehalten
                wird, kicken. Diese illegalen Aktionen ändern nicht den Status
                eines freien Balles bzw. eines Vorwärtspasses, aber wenn der
                Spieler, der einen Ball für einen Place Kick hält, den
                Ballbesitz während eines Scrimmage Downs verliert, ist das ein
                Fumble und der Ball ist frei. Ereignet sich das beim Free Kick,
                bleibt der Ball dead (A.R. 8.7.2.IV und A.R. 10.2.2.XI).
            </p>
            <p>
                <strong>Strafe: 10 Meter und Downverlust für Team A-Fouls,
                soweit der Downverlust nicht im Widerspruch zu anderen Regeln
                steht [S9 und S31] ( Ausnahme: kein Downverlust, wenn sich das
                Foul ereignet, während sich ein legaler Scrimmage Kick jenseits
                der neutralen Zone befindet).</strong>
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.9.4.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
